--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
 <title>Content Library</title>
 </head>
 <body>
-      <h1>Welcome to Ishika Gupta</h1>
+      <h1>Welcome to Ishika Gupta Content Library</h1>
 </body>
 </html>
