--- a/Index.html
+++ b/Index.html
@@ -1,47 +1,158 @@
-<!DOCTYPE html>
+
+      <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Content Library</title>
+
 </head>
+
 <body>
+
       <h1>Welcome to Ishika Gupta Content Library</h1>
+
       <p1>I am doing this to make all my projects look good and consistent</p1>
+
       <hr>
+
       <h2>@Typography</h2>
+
       <h1>This is the biggest heading</h1>
+
       <h2>This is the 2nd biggest heading</h2>
+
       <small>Relatively small</small>
+
       <hr>
+
       <h1>@Container</h1>
+
       <h2>fluid container</h1>
+
       <div>It will go to end.</div>
+
       <h1>center container</h1>
+
       <div>This will go upto a specific width.</div>
+
       <hr>
+
       <h1>@Links</h1>
+
       <a href="/">Primary links</a>
+
       <a href="/">Secondary links</a>
+
       <hr>
+
       <h1>@Lists</h1>
+
       <h2>Unordered list</h2>
+
       <ul>
+
       <li>1. apples</li>
+
       <li>2. bananas</li>
+
       <li>3. grapes</li>
+
       </ul>
+
       <h2>Unordered inline list</h2>
+
       <ul>
+
       <li>1. apples</li>
+
       <li>2. bananas</li>
+
       <li>3. grapes</li>
+
       </ul>
+
       <h2>Reverse order list</h2>
-      <ul>
+
+      <ol>
+
       <li>1. apples</li>
+
       <li>2. bananas</li>
+
       <li>3. grapes</li>
-      </ul>
+
+      </ol>
+
+      </hr>
+
+      <h2>@Nav</h2>
+
+      <nav>
+
+            <ul>
+
+            <li>
+
+                  <a href="/">home</a>
+
+            </li>
+
+            <li>
+
+                  <a href="/">projects</a>
+
+            </li>
+
+            <li>
+
+                  <a href="/">about</a>
+
+            </li>
+
+            </ul>
+
+      </nav>
+
+      <hr>
+
+      <h2>Header</h2>
+
+      <header>
+
+            <img src="" />
+
+            <h1>heading inside hero</h1>
+
+      </header>
+
+  <hr>
+
+  <h2>@Section</h2>
+
+  <section>
+
+    <h3>white section</h3>
+
+    <p>This will have white background.</p>  
+
+  </section>
+
+  <section>
+
+  <h3>off white section</h3>
+
+  <p>This will have off white background.</p>
+
+  </section>
+
+  
+
 </body>
+
 </html>
