--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,4 @@
-
-      <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -121,7 +120,7 @@
 
       <hr>
 
-      <h2>Header</h2>
+      <h2>@Header</h2>
 
       <header>
 
@@ -150,8 +149,17 @@
   <p>This will have off white background.</p>
 
   </section>
+  <hr>
+  <h2>@Footer</h2>
 
-  
+  <footer>
+        <div>some small heading inside footer</div>
+        <ul>
+              <li>socialone</li>
+              <li>socialtwo</li>
+              <li>socialthree</li>
+        </ul>
+  </footer>
 
 </body>
 
