--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Content Library</title>
+ 
+ <link href="styles.css" rel="stylesheet" />
 
 </head>
 
