--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,8 @@
       <h1>This is the biggest heading</h1>
 
       <h2>This is the 2nd biggest heading</h2>
+ 
+      <p> This will have a <strong>bold</strong> text</p>
 
       <small>Relatively small</small>
 
