--- a/Index.html
+++ b/Index.html
@@ -40,11 +40,11 @@
 
       <h2>fluid container</h1>
 
-      <div>It will go to end.</div>
+      <div class="container-fluid">It will go to end.</div>
 
       <h1>center container</h1>
 
-      <div>This will go upto a specific width.</div>
+      <div class="container">This will go upto a specific width.</div>
 
       <hr>
 
