--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
 
       <h1>@Links</h1>
 
-      <a href="/">Primary links</a>
+      <a class=link primary-link href="/">Primary links</a>
 
       <a href="/">Secondary links</a>
 
