--- a/Index.html
+++ b/Index.html
@@ -50,17 +50,19 @@
 
       <h1>@Links</h1>
 
-      <a class=link primary-link href="/">Primary links</a>
+      <a class="link primary-link" href="/">Primary links</a>
 
-      <a href="/">Secondary links</a>
+      <a class="link secondary-link" href="/">Secondary links</a>
 
       <hr>
 
       <h1>@Lists</h1>
 
       <h2>Unordered list</h2>
+ 
+      <p> this will not have bullets </p>
 
-      <ul>
+      <ul class="non-bullet">
 
       <li>1. apples</li>
 
