--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
  
       <p> this will not have bullets </p>
 
-      <ul class="non-bullet">
+      <ul class="list-non-bullet">
 
       <li>1. apples</li>
 
@@ -74,13 +74,13 @@
 
       <h2>Unordered inline list</h2>
 
-      <ul>
+      <ul class="list-non-bullet">
 
-      <li>1. apples</li>
+      <li class="list-item-inline">1. apples</li>
 
-      <li>2. bananas</li>
+      <li class="list-item-inline">2. bananas</li>
 
-      <li>3. grapes</li>
+      <li class="list-item-inline">3. grapes</li>
 
       </ul>
 
