--- a/Index.html
+++ b/Index.html
@@ -100,25 +100,26 @@
 
       <h2>@Nav</h2>
 
-      <nav>
+      <nav class="navigation container">
+       <div class="nav-brand">iAmBrand</div>
 
-            <ul>
+            <ul class="list-non-bullet nav-pills">
 
-            <li>
+            <li class="list-item-inline">
 
-                  <a href="/">home</a>
-
-            </li>
-
-            <li>
-
-                  <a href="/">projects</a>
+                  <a class="link" href="/">home</a>
 
             </li>
 
-            <li>
+            <li class="list-item-inline">
 
-                  <a href="/">about</a>
+                  <a class="link" href="/">projects</a>
+
+            </li>
+
+            <li class="list-item-inline">
+
+                  <a class="link" href="/">about</a>
 
             </li>
 
