--- a/Index.html
+++ b/Index.html
@@ -107,7 +107,7 @@
 
             <li class="list-item-inline">
 
-                  <a class="link" href="/">home</a>
+                  <a class="link link-active" href="/">home</a>
 
             </li>
 
@@ -131,11 +131,11 @@
 
       <h2>@Header</h2>
 
-      <header>
+      <header class="hero">
 
-            <img src="" />
+            <img class="hero-img" src="" />
 
-            <h1>heading inside hero</h1>
+            <h1 class="hero-heading">heading inside hero</h1>
 
       </header>
 
