--- a/Index.html
+++ b/Index.html
@@ -135,7 +135,7 @@
 
             <img class="hero-img" src="" />
 
-            <h1 class="hero-heading">heading inside hero</h1>
+            <h1 class="hero-heading">aadarsh balika the <span class="heading-inverted">web developer</span></h1>
 
       </header>
 
