--- a/Index.html
+++ b/Index.html
@@ -143,17 +143,17 @@
 
   <h2>@Section</h2>
 
-  <section>
+  <section class="section">
 
-    <h3>white section</h3>
+    <h1>white section</h1>
 
     <p>This will have white background.</p>  
 
   </section>
 
-  <section>
+  <section class="section ow">
 
-  <h3>off white section</h3>
+  <h1>off white section</h1>
 
   <p>This will have off white background.</p>
 
