--- a/Index.html
+++ b/Index.html
@@ -144,10 +144,14 @@
   <h2>@Section</h2>
 
   <section class="section">
+   
+    <div class="container container-center">
 
     <h1>white section</h1>
 
     <p>This will have white background.</p>  
+    
+    </div>
 
   </section>
 
@@ -162,11 +166,17 @@
   <h2>@Footer</h2>
 
   <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-              <li>socialone</li>
-              <li>socialtwo</li>
-              <li>socialthree</li>
+        <div class="footer-header">some small heading inside footer</div>
+        <ul class="social-links">
+              <li class="list-item-inline">
+               <a class="link" href="/">socialone</a>
+              </li>
+              <li class="list-item-inline">
+               <a class="link" href="/">socialtwo</a>
+              </li>
+              <li class="list-item-inline">
+               <a class=" link" href="/">socialthree</a>
+              </li>
         </ul>
   </footer>
 
