--- a/Index.html
+++ b/Index.html
@@ -165,7 +165,7 @@
   <hr>
   <h2>@Footer</h2>
 
-  <footer>
+  <footer class="footer">
         <div class="footer-header">some small heading inside footer</div>
         <ul class="social-links">
               <li class="list-item-inline">
