--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@
       <h2>@Nav</h2>
 
       <nav class="navigation container">
-       <div class="nav-brand">iAmBrand</div>
+       <div class="nav-brand">iAmDeveloper</div>
 
             <ul class="list-non-bullet nav-pills">
 
@@ -119,7 +119,7 @@
 
             <li class="list-item-inline">
 
-                  <a class="link" href="/">about</a>
+                  <a class="link" href="/">blogs</a>
 
             </li>
 
